# datathon2026

./: .gitignore  README.md  pyproject.toml
eda_results/: eda_summary_findings.md  findings.json  outlier_lookup.csv
eda_results/processed/: daily_items.parquet  daily_orders.parquet  daily_returns.parquet  daily_shipments.parquet  lag_rolling_features.parquet  merged_daily.parquet
notebooks/: eda_comprehensive_executed.ipynb  final.ipynb  task1.ipynb  task2.ipynb
scripts/: evaluate.py  predict.py  train.py  tune.py
src/forecasting/: __init__.py  config.py  cv.py  data.py  ensemble.py  features.py  metrics.py  pipeline.py
src/forecasting/models/: __init__.py  base.py  tabular.py
